# fast-handover

./: LICENSE  README.md
handover_robot/: Dockerfile  README.md  handover_run.sh  kill_all.sh
handover_robot/Universal_Robots_ROS_Driver/ur_robot_driver/launch/: ur5_bringup.launch
handover_robot/franka_ros/franka_control/config/: default_controllers.yaml
handover_robot/franka_ros/franka_control/launch/: franka_control.launch
handover_robot/franka_ros/franka_description/robots/: panda_arm.urdf.xacro
handover_robot/handover_action/: CMakeLists.txt  package.xml
handover_robot/handover_action/action/: Gripper.action  Joint.action  Pose.action
handover_robot/handover_action/docs/: actions.md
handover_robot/handover_moveit_ctrl/: CMakeLists.txt  README.md  package.xml
handover_robot/handover_moveit_ctrl/launch/: panda.launch  ur5.launch
handover_robot/panda_moveit_config/config/: simple_moveit_controllers.yaml
handover_robot/panda_moveit_config/launch/: franka_control.launch  move_group.launch  moveit.rviz  moveit_handover.rviz  planning_context.launch
handover_robot/robotiq_arg85_description/robots/: robotiq_arg85.urdf.xacro
handover_robot/servo_ctrl/: CMakeLists.txt  README.md  package.xml
handover_robot/servo_ctrl/config/: config_panda.yaml  config_ur5.yaml
handover_robot/servo_ctrl/launch/: servo.launch
handover_robot/smach_handover_ctrl/: CMakeLists.txt  README.md  package.xml
handover_robot/smach_handover_ctrl/scripts/: controller_server.py  planner.py
handover_robot/universal_robot/ur5_moveit_config/config/: robotiq_85.xacro  ros_controllers.yaml  sensors_depthmap.yaml  ur5.xacro  ur5_arm_hand.srdf.xacro  ur5_robotiq.srdf
handover_robot/universal_robot/ur5_moveit_config/launch/: demo.launch  planning_context.launch  sensor_manager.launch.xml
handover_robot/universal_robot/ur_description/urdf/inc/: ur5_macro.xacro  ur_macro_robotiq.xacro
handover_vision/: CMakeLists.txt  Dockerfile  README.md  package.xml  requirements.txt
handover_vision/launch/: camera.launch  perception_pipeline.launch
handover_vision/msg/: Keypoints2D.msg
handover_vision/rviz/: perception_pipeline.rviz
handover_vision/scripts/: Segmentator_YOLOv8.py  hand_detector.py  kalman_filter_node.py  object_detector.py  pointcloud_merger.py  utils.py
