<?xml version="1.0"?>
<package format="2">
  <name>handover_moveit_ctrl</name>
  <version>0.0.3</version>
  <description>The handover_moveit_ctrl package</description>

  <maintainer email="enrico.turco@iit.it">Enrico Turco</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>

  <build_export_depend>moveit_core</build_export_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  
</package>
