<?xml version="1.0"?>
<package format="2">
  <name>servo_ctrl</name>
  <version>1.0.0</version>

  <description>The servo control package.</description>

  <maintainer email="enrico.turco@iit.it">Enrico Turco</maintainer>
  
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>moveit_servo</depend>
  
  <export>
  </export>

</package>
