<package>
  <name>smach_handover_ctrl</name>
  <version>0.1.0</version>
  <description>
    This package containes a SMACH for Handover.
  </description>
  <author>Enrico Turco</author>
  <maintainer email="enrico.turco@iit.it">Enrico Turco</maintainer>
  <license>MIT</license>

  <url>http://ros.org/wiki/smach_tutorials</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>smach_ros</run_depend>
  <run_depend>handover_action</run_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>

</package>
